--- a/templates/corporate.html
+++ b/templates/corporate.html
@@ -19,8 +19,12 @@
     <div style="margin-left: 5%">
         <a href="https://www.inadsglobal.com/information/inads" style="text-decoration: none; color: blue"><h1>InAds - Info</h1></a>
         <h2>U.S.</h2>
-        <h3>+ 1 302 440 1598</h3>
-        <h3>651 N Broad St, Suite 206, Middletown, 19709, New Castle, Delaware</h3>
+        <br>
+        <h3>New York, Data Center</h3>
+        <h3>+ 1 917 7242875</h3>
+        <br>
+        <h3>HQ | 651 N Broad St, Suite 206, Middletown, 19709, New Castle, Delaware</h3>
+        <h3>NY Calls will be received by the Headquarters</h3>
         <hr>
         <h2>Istanbul</h2>
         <h3>+90 850 441 2415 (Our Istanbul office might be currently offline due to Covid-19)</h3>
