--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -117,21 +117,20 @@
         Other Networks <div class="bar bar2">0.2 USD</div>
     </div>
     <div id="infoDiv" style="margin-left: 100px; margin-top: 4%;">
-        <center style="width: 250px; box-shadow: 0px 0px 0px 3px rgba(0,120,120, 1); border-radius: 8px; float: left; margin-left: 120px; margin-top: 25px">
-            <h2 style="margin-top: 5%;">Cheapest possible</h2>
-            <h3 style="opacity: 0.5;">Our no commission policy allows us to offer the cheapest price in the market to our customers.</h3>
-            <a href="/plans"><button style="background-color: gray; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%">Learn More</button></a>
+        <center style="width: 250px; border: none; float: left; margin-left: 120px; margin-top: 25px">
+            <h2 style="margin-top: 5%; font-family:Roboto">Cheapest possible</h2>
+            <p style="opacity: 1;">Our no commission policy allows us to offer the cheapest price in the market to our customers.</p>
+            <a href="/plans"><button style="background-color: green; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%"><strong>Learn More</strong></button></a>
         </center>
-        <center style="width: 250px; box-shadow: 0px 0px 0px 3px rgba(0,120,120, 1); border-radius: 8px; float: left; margin-left: 120px; margin-top: 25px">
-            <h2 style="margin-top: 5%">Targeted ads</h2>
-            <h3 style="opacity: 0.5;">Our powerful network enables our advertisers to advertise directly to their target audience.
-                Through picking keywords and interests.</h3>
-            <a href="/register"><button style="background-color: gray; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 5%">Learn More</button></a>
+        <center style="width: 250px; border: none; float: left; margin-left: 120px; margin-top: 25px">
+            <h2 style="margin-top: 5%; font-family:Roboto">Targeted ads</h2>
+            <p style="opacity: 1;">Our powerful network enables our advertisers to advertise directly to their target audience.</p>
+            <a href="/register"><button style="background-color: green; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%"><strong>Learn More</strong></button></a>
         </center>
-        <center style="width: 250px; box-shadow: 0px 0px 0px 3px rgba(0,120,120, 1); border-radius: 8px; float: left; margin-left: 120px; margin-top: 25px">
-            <h2 style="margin-top: 5%">You control your content</h2>
-            <h3 style="opacity: 0.5;">You can customise the shape and place of the ads on your website and receive feedback on your advertised content.</h3>
-            <a href="/register"><button style="background-color: gray; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7">Learn More</button></a>
+        <center style="width: 250px; border: none; float: left; margin-left: 120px; margin-top: 25px">
+            <h2 style="margin-top: 5%; font-family:Roboto">Customise</h2>
+            <p style="opacity: 1;">You can customise the ads on your website and get feedback on the advertised content.</p>
+            <a href="/register"><button style="background-color: green; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%"><strong>Learn More</strong></button></a>
         </center>
     </div>
     <br style="clear: both">
