--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -128,7 +128,7 @@
             <a href="/register"><button style="background-color: green; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%"><strong>Learn More</strong></button></a>
         </center>
         <center style="width: 250px; border: none; float: left; margin-left: 120px; margin-top: 25px">
-            <h2 style="margin-top: 5%; font-family:Roboto">Customisation</h2>
+            <h2 style="margin-top: 5%; font-family:Roboto">Customization</h2>
             <p style="opacity: 1;">You can customise the ads on your website and get feedback on the advertised content.</p>
             <a href="/register"><button style="background-color: green; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%"><strong>Learn More</strong></button></a>
         </center>
