--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="yandex-verification" content="6b0368c975b5c0cb" />
     <title>InAds</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
 <body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5;  padding: 0; margin: 0; outline: 0; border: 0">
