--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
         }
     </style>
     <div>
-        <div style="width: 100%; color: gray; margin-bottom: 0%; position: fixed; background-color: white; box-shadow: 0 8px 12px -12px black;"><hr style="opacity: 0; height: 1px">
+        <div style="width: 100%; color: gray; margin-bottom: 0%; position: fixed; background-color: white; box-shadow: 0 8px 12px -12px black;">
             <hr style="opacity: 0; height: 1px">
             <img src="/logos/webicon.png" style="height: 5%; width: 5%; margin-left: 3%; vertical-align: middle; display:inline-block;">
             <a class="navbarElement" style="margin-left: 4%;" href="/"><small>Home Page</small></a>
@@ -98,7 +98,7 @@
             <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
             <a class="navbarElement" href="/docs"><small>Docs</small></a>
             <a class="navbarElement" style="float:right; margin-right: 5%;" href="/register">Register</a>
-            <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a><hr style="opacity: 0">
+            <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
             <hr style="opacity: 0">
         </div>
         <img id="titleimage" src="/logos/title.png" alt=""  style="width: 100%">
