--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
         }
     </style>
     <div>
-        <div style="width: 100%; color: gray; margin-bottom: 0%; position: fixed; background-color: white; box-shadow: 0 8px 12px -12px black;">
+        <div style="width: 100%; color: gray; margin-bottom: 0%; position: fixed; background-color: white; box-shadow: 0 8px 12px -12px black; z-index:10">
             <hr style="opacity: 0; height: 1px">
             <img src="/logos/webicon.png" style="height: 5%; width: 5%; margin-left: 3%; vertical-align: middle; display:inline-block;">
             <a class="navbarElement" style="margin-left: 4%;" href="/"><small>Home Page</small></a>
