--- a/templates/loadmoney.html
+++ b/templates/loadmoney.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/styles">
 </head>
 <body style="font-family: open sans; margin: 0;">
-    <div style="min-height: 100vh; background-color: rgba(150, 238, 229, 0.05); width: 20%; border-right:1px solid rgba(150, 150, 150, .5); float: left">
+    <div style="min-height: 100vh; background-color: rgba(150, 238, 229, 0.05); width: 20%; border-right:1px solid rgba(150, 150, 150, .5); float: left; position: fixed; box-shadow: 10px 0px 12px -12px black; z-index:10">
         <div style="color: black; margin-left: 25%;">
             <br>
             {{ user.email }}
