--- a/templates/index.html
+++ b/templates/index.html
@@ -169,8 +169,8 @@
         </p>
         <br>
         <img style="float: right; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%; width: 250px; height: 250px" src="/logos/webexample.png" alt="">
-        <h1 style="margin-top: 20%; margin-left: 2%">Number of ads matter</h1>
-        <p style="margin-right: 10%; margin-left: 10%;">Unlike other ad networks' "A page view is what is counted in your reports every time a user views a page displaying ads. We will count one page view regardless of the number of ads displayed on that page." policy your website generates income for every single ad on your web page.</p>
+        <h1 style="margin-top: 20%; margin-left: 2%">Insure your campaign</h1>
+        <p style="margin-right: 10%; margin-left: 10%;">With InAds your campaigns can be insured. If your campaign does not turn a positive ROI we will cover the remaining cost of advertising. Overall, every InAds campaign becomes essentially free with ROI guarantee.</p>
     </div>
     <center style="margin-top: 10%; margin-left: 20%; margin-right: 20%; clear: both">
         <h1>Copy and paste a single line of code and place the ads on your website to 5x your income.</h1>
