--- a/templates/careers.html
+++ b/templates/careers.html
@@ -5,7 +5,7 @@
     <title>InAds Careers</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="/styles">
+    <link rel="stylesheet" type="text/css" href="https://www.inadsglobal.com/styles">
 </head>
 <body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5; padding: 0; margin: 0; outline: 0; border: 0; color: rgb(0, 0, 50)">
     <div>
