--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
-<body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5;  padding: 0; margin: 0; outline: 0; border: 0">
+<body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5;  padding: 0; margin: 0; outline: 0; border: 0; background-color: #34495e; color: white">
     <link rel="stylesheet" type="text/css" href="/styles">
     <style>
         html,body{
@@ -23,7 +23,7 @@
         }
         h1{
           text-align: center;
-          color: #34495e;
+          color: white;
         }
         .bar{
           height: 30px;
