--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -137,7 +137,7 @@
     <br style="clear: both">
 
 
-    <center style="background-image: url('/logos/bgest.jpeg'); height: 40%; margin-top: 15%; color: white">
+    <center style="background-color: #00425e; height: 40%; margin-top: 15%; color: white">
         <p style="opacity: 0">InAds</p>
         <h4 style="margin-top: 3%">SKYROCKET YOUR INCOME</h4>
         <h1 style="margin-top: 3%; color: white">Calculate your estimated income</h1>
