--- a/templates/payout.html
+++ b/templates/payout.html
@@ -3,7 +3,8 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="/styles">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
+    <link href
+                  ="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <script>
         if({{ user.account_balance }} < 150){
             alert("Your account balance needs to be higher than 150 USD to be able to receive payouts")
