--- a/templates/index.html
+++ b/templates/index.html
@@ -180,6 +180,7 @@
     <div style="background-color: rgb(0, 50, 50); color: white">
         <br>
         <a href="/corporate" style="text-decoration: none; color: white; margin-left: 5%"><strong>About Us</strong></a>
+        <a href="/terms" style="text-decoration: none; color: white; margin-left: 5%"><strong>Terms of Use</strong></a>
         <br>
         <hr style="margin-top: 3%; margin-right: 50%; margin-left: 5%">
         <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
