--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -187,6 +187,7 @@
     <div style="background-color: rgb(0, 50, 50); color: white">
         <br>
         <a href="/corporate" style="text-decoration: none; color: white; margin-left: 5%"><strong>About Us</strong></a>
+        <a href="/terms" style="text-decoration: none; color: white; margin-left: 5%"><strong>Terms of Use</strong></a>
         <br>
         <hr style="margin-top: 3%; margin-right: 50%; margin-left: 5%">
         <div style="margin-left: 5%; margin-top: 3%">651 N Broad St, Suite 206, Middletown, 19709, New Castle, Delaware</div>
