--- a/templates/terms.html
+++ b/templates/terms.html
@@ -3,7 +3,7 @@
 
 <title>InAds - Terms of Use</title>
 
-<body style="font-family: open sans">
+<body style="font-family: open sans; margin: 5%">
     <h2>Terms of Use</h2>
 
     <p>The www.inadsglobal.com website located at https://www.inadsglobal.com is a copyrighted work belonging to InGames, Inc.. Certain features of the Site may be subject to additional guidelines, terms, or rules, which will be posted on the Site in connection with such features.</p>
