--- a/templates/login.html
+++ b/templates/login.html
@@ -42,6 +42,8 @@
             <br>
             <div style="margin-top: 5%">Do not have an account? <a href="/register" class="navbarElement">Register</a></div>
             <br>
+            <div style="margin-top: 5%">Forgot password? <a href="/password_reset" class="navbarElement">Reset Password</a></div>
+            <br>
         </form>
     </div>
 
