--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -28,7 +28,7 @@
         }
     </style>
     <div style="margin-top: 3%">
-        <form id="form-id" method=post enctype=multipart/form-data style="margin-top: 18vh; background-color: white; width: 30%; float: right; margin-right: 34%; border-radius: 5px; border: none">
+        <form id="formMain" method=post enctype=multipart/form-data style="margin-top: 18vh; background-color: white; width: 30%; float: right; margin-right: 34%; border-radius: 5px; border: none">
             <h1>InAds - Change Password</h1>
             <br>
             <span>Old Password</span>
