--- a/templates/payout.html
+++ b/templates/payout.html
@@ -60,7 +60,7 @@
             <input class="buttonBlue" style="width: 25%" type=submit value="Start Campaign">
             <br>
             <br>
-            Enter all the applicable information, you can leave some entries empty.
+            Enter all the applicable information, you may leave some entries empty.
             Receiving payments can take up to a month depending on your region, about 2 weeks in average.
         </form>
     </div>
