--- a/templates/payout.html
+++ b/templates/payout.html
@@ -57,7 +57,7 @@
             <input class="mainFormBig" style="width: 100%" type=text name=rnumber placeholder="Routing Number">
             <hr>
             <br>
-            <input class="buttonBlue" style="width: 25%" type=submit value="Start Campaign">
+            <input class="buttonBlue" style="width: 25%" type=submit value="Send Information">
             <br>
             <br>
             Enter all the applicable information, you may leave some entries empty.
