--- a/templates/payout_status.html
+++ b/templates/payout_status.html
@@ -8,6 +8,7 @@
     <script>
         if({{ user.account_balance }} < 150){
             alert("Your account balance needs to be higher than 150 USD to be able to receive payouts")
+            document.location = "/dashboard"
         }
     </script>
 </head>
@@ -38,33 +39,7 @@
     </div>
 
     <div style="float: left; width: 75%; margin-left: 25%">
-        <h1>Receive Payout</h1>
+        <h1>Current payment status: {{ status_track }}</h1>
         <h2>Current account balance: {{ "%.2f" % user.account_balance }} $</h2>
-        <form method=post enctype=multipart/form-data>
-            <input class="mainFormBig" style="width: 100%" type=text name=name placeholder="Account holder full name">
-            <hr>
-            <input class="mainFormBig" style="width: 100%" type=text name=paddress placeholder="Account holder address">
-            <hr>
-            <input class="mainFormBig" style="width: 100%" type=text name=namebank placeholder="Bank Name">
-            <hr>
-            <input class="mainFormBig" style="width: 100%" type=text name=baddress placeholder="Bank Address">
-            <hr>
-            <input class="mainFormBig" style="width: 100%" type=text name=anumber placeholder="Account Number">
-            <hr>
-            <input class="mainFormBig" style="width: 100%" type=text name=atype placeholder="Account type(ex: savings)">
-            <hr>
-            <input class="mainFormBig" style="width: 100%" type=text name=rnumber placeholder="Routing Number">
-            <hr>
-            <br>
-            <input class="buttonBlue" style="width: 25%" type=submit value="Send Information">
-            <br>
-            <br>
-            Enter all the applicable information, you may leave some entries empty.
-            Receiving payments can take up to a month depending on your region, about 2 weeks in average.
-            <input class="mainFormBig" style="width: 100%; margin-top: 5%" type=text name=rnumber placeholder="Tracking Number">
-            <hr>
-            <br>
-            <input class="buttonBlue" style="width: 25%" type=submit value="Track Payout">
-        </form>
     </div>
 </body>
