--- a/templates/payout.html
+++ b/templates/payout.html
@@ -40,7 +40,7 @@
     <div style="float: left; width: 75%; margin-left: 25%">
         <h1>Receive Payout</h1>
         <h2>Current account balance: {{ "%.2f" % user.account_balance }} $</h2>
-        <form method=post enctype=multipart/form-data>
+        <form method=post enctype="multipart/form-data">
             <input class="mainFormBig" style="width: 100%" type=text name=name placeholder="Account holder full name">
             <hr>
             <input class="mainFormBig" style="width: 100%" type=text name=paddress placeholder="Account holder address">
@@ -61,7 +61,7 @@
             <br>
             Enter all the applicable information, you may leave some entries empty.
             Receiving payments can take up to a month depending on your region, about 2 weeks in average.
-            <input class="mainFormBig" style="width: 100%; margin-top: 5%" type=text name=rnumber placeholder="Tracking Number">
+            <input class="mainFormBig" style="width: 100%; margin-top: 5%" type=text name=track_id placeholder="Tracking Number">
             <hr>
             <br>
             <input class="buttonBlue" style="width: 25%" type=submit value="Track Payout">
