--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -39,7 +39,7 @@
     </div>
     <script>
         function formVerifier(){
-            document.getElementById("formMain").submit()
+            document.getElementById("form-id").submit()
         }
     </script>
 </body>
