--- a/templates/payout.html
+++ b/templates/payout.html
@@ -10,6 +10,17 @@
             alert("Your account balance needs to be higher than 150 USD to be able to receive payouts")
         }
     </script>
+    <style>
+        .newGreenButton{
+            background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body style="font-family: open sans; margin: 0;">
@@ -56,7 +67,7 @@
             <input class="mainFormBig" style="width: 100%" type=text name=rnumber placeholder="Routing Number">
             <hr>
             <br>
-            <input class="buttonBlue" style="width: 25%" type=submit value="Send Information">
+            <input class="newGreenButton" style="width: 25%" type=submit value="Send Information">
             <br>
             <br>
             Enter all the applicable information, you may leave some entries empty.
@@ -64,7 +75,7 @@
             <input class="mainFormBig" style="width: 100%; margin-top: 5%" type=text name=track_id placeholder="Tracking Number">
             <hr>
             <br>
-            <input class="buttonBlue" style="width: 25%" type=submit value="Track Payout">
+            <input class="newGreenButton" style="width: 25%" type=submit value="Track Payout">
         </form>
     </div>
 </body>
