--- a/templates/payout.html
+++ b/templates/payout.html
@@ -79,12 +79,12 @@
             <input class="newGreenButton" style="width: 25%" type=submit value="Send Information">
             <br>
             <br>
-            Enter all the applicable information, you may leave some entries empty.
-            Receiving payments can take up to a month depending on your region, about 2 weeks in average.
+            <p>Enter all the applicable information, you may leave some entries empty.
+            Receiving payments can take up to a month depending on your region, about 2 weeks in average.</p>
             <input class="v2Input" style="width: 60%; margin-top: 5%" type=text name=track_id placeholder="Tracking Number">
             <br>
             <br>
-            <input class="newGreenButton" style="width: 25%" type=submit value="Track Payout">
+            <input class="newGreenButton" style="width: 25%; margin-bottom: 5%" type=submit value="Track Payout">
         </form>
     </div>
 </body>
