--- a/templates/payout_status.html
+++ b/templates/payout_status.html
@@ -68,8 +68,9 @@
             <div class="eCircle"><br><br><div style="margin-left: 40px; font-size: 7rem; color: #04AA6D" class="fa fa-credit-card"></div></div>
         {% elif status_track == "Payments received from processor, completing direct deposit" %}
             <div class="eCircle"><br><br><div style="margin-left: 40px; font-size: 7rem; color: #04AA6D" class="fa fa-money"></div></div>
-        {% elif status_track == "Payment sent, pending bank confirmation"%}
+        {% elif status_track == "Payment sent, pending bank confirmation" %}
             <div class="eCircle"><br><span style="margin-left: 60px; color: green; font-size: 7rem;">&check;</span></div>
+        {% endif %}
         <h1>Current payment status: {{ status_track }}</h1>
         <h2>Current account balance: {{ "%.2f" % user.account_balance }} $</h2>
     </div>
