--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -118,17 +118,17 @@
         Other Networks <div class="bar bar2">0.2 USD</div>
     </div>
     <div id="infoDiv" style="margin-left: 100px; margin-top: 4%;">
-        <center style="width: 500px; border: none; float: left; margin-left: 160px; margin-top: 25px">
+        <center style="width: 500px; border: none; float: left; margin-left: 16%; margin-top: 25px">
             <h2 style="margin-top: 5%; font-family:Roboto">Cheapest possible</h2>
             <p style="opacity: 1;">Our no commission policy allows us to offer the cheapest price in the market to our customers.</p>
             <a href="/plans"><button style="background-color: green; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%"><strong>Learn More</strong></button></a>
         </center>
-        <center style="width: 500px; border: none; float: left; margin-left: 160px; margin-top: 25px">
+        <center style="width: 500px; border: none; float: left; margin-left: 16%; margin-top: 25px">
             <h2 style="margin-top: 5%; font-family:Roboto">Targeted ads</h2>
             <p style="opacity: 1;">Our powerful network enables our advertisers to advertise directly to their target audience.</p>
             <a href="/register"><button style="background-color: green; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%"><strong>Learn More</strong></button></a>
         </center>
-        <center style="width: 500px; border: none; float: left; margin-left: 160px; margin-top: 25px">
+        <center style="width: 500px; border: none; float: left; margin-left: 16%; margin-top: 25px">
             <h2 style="margin-top: 5%; font-family:Roboto">Customization</h2>
             <p style="opacity: 1;">You can customise the ads on your website and get feedback on the advertised content.</p>
             <a href="/register"><button style="background-color: green; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%"><strong>Learn More</strong></button></a>
