--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -109,7 +109,7 @@
 
         </div>
         <hr style="opacity: 0">
-        <img id="titleimage" src="/logos/title.png" alt=""  style="width: 100%">
+        <img id="titleimage" src="/logos/titlemobile.png" alt=""  style="width: 100%">
         <br>
     </div>
     <div class="graph-cont">
